# Orbit

./: .gitignore  README.md  TESTING_GUIDE.md  test-screen-sharing.ps1
.github/workflows/: rust.yml
backend/: .env.example  Cargo.toml
backend/db/: connection.rs
backend/migrations/: 20260630_init_schema.sql  20260702_add_contacts_and_user_sessions.sql  20260702_add_device_to_device_sessions.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/auth/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/contacts/: handlers.rs  mod.rs  models.rs
backend/src/db/: connection.rs
backend/src/device/: handlers.rs
backend/src/middleware/: auth.rs
backend/src/session/: handlers.rs  mod.rs
backend/src/utils/: rate_limit.rs
backend/src/websocket/: handler.rs
backend/tests/: auth_test.rs  device_test.rs
chrome-extension/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
chrome-extension/public/: manifest.json
chrome-extension/src/: index.tsx
chrome-extension/src/components/: ContactsManager.tsx  Login.tsx  PendingSessions.tsx  Register.tsx  RegisterDevice.tsx  RemoteScreen.tsx  ScreenShareHost.tsx  SessionManager.tsx
chrome-extension/src/hooks/: useInput.ts  useScreenShare.ts  useWebRTC.ts
chrome-extension/src/services/: api.ts  session.ts
chrome-extension/src/stores/: authStore.ts
chrome-extension/src/styles/: globals.css
desktop-agent/: .env.example  Cargo.toml
desktop-agent/src/: config.rs  main.rs
desktop-agent/src/capture/: dxgi.rs  fps_controller.rs  frame.rs  mod.rs  wgc.rs
desktop-agent/src/encoder/: h264.rs  hardware.rs  mod.rs  software.rs
desktop-agent/src/input/: events.rs  keyboard.rs  mod.rs  mouse.rs
desktop-agent/src/network/: datachannel.rs  mod.rs  signaling.rs  webrtc.rs
