[package]
name = "orbit-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Windows APIs
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse"
] }
enigo = "0.6"
# WebRTC
webrtc = "0.17"
# Signaling
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
# NOTE: Encoding moved to future phase to resolve dependency conflicts
