[package]
name = "orbit-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.9"
async-trait = "0.1"

# Input simulation (mouse/keyboard). enigo 0.6 uses the Mouse/Keyboard traits.
enigo = "0.6"

# WebRTC peer connection
webrtc = "0.17"

# Signaling client (WebSocket to the backend)
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"

# Windows screen capture APIs (only compiled on Windows targets)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
] }
